samples/_failures_safe/1761444494_79a890_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec8df0fa.c: In function ‘main’:
./samples/SAFE/__tmp_ec8df0fa.c:144:5: error: expected declaration or statement at end of input
  144 |     kruskal_mst(&graph);
      |     ^~~~~~~~~~~
